메인에 팝업추가/ css 추가

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- 1. header -->
     <header>
+        <div class="popup">popup</div>
         <div class="inner">
             <h1 class="logo"><a href="#"><img src="./images/logo2.png" alt="매머드 로고"></a></h1>
             <nav>
